--- a/godtools/Views/GTHomeView.xib
+++ b/godtools/Views/GTHomeView.xib
@@ -22,15 +22,6 @@
                 <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" fixedFrame="YES" image="GT4_HomeScreen_NavBar_" translatesAutoresizingMaskIntoConstraints="NO" id="GCk-XZ-SNq">
                     <rect key="frame" x="0.0" y="0.0" width="320" height="46"/>
                 </imageView>
-                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hK1-HD-VKf">
-                    <rect key="frame" x="247" y="-8" width="80" height="62"/>
-                    <state key="normal" image="GT4_HomeScreen_SettingsIcon_">
-                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                    </state>
-                    <connections>
-                        <action selector="settingsButtonPressed:" destination="iN0-l3-epB" eventType="touchUpInside" id="8N5-pI-EwH"/>
-                    </connections>
-                </button>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="[ Translator Mode ]" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aHU-fT-gkv">
                     <rect key="frame" x="198" y="56" width="113" height="21"/>
                     <fontDescription key="fontDescription" type="system" pointSize="13"/>
@@ -67,16 +58,35 @@
                     <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" fixedFrame="YES" image="GT4_HomeScreen_SetLanguage" translatesAutoresizingMaskIntoConstraints="NO" id="ESA-OQ-L88">
-                    <rect key="frame" x="40" y="3" width="282" height="91"/>
-                </imageView>
-                <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" fixedFrame="YES" image="GT4_HomeScreen_PickTool" translatesAutoresizingMaskIntoConstraints="NO" id="KqV-sW-gO4">
-                    <rect key="frame" x="-47" y="180" width="240" height="95"/>
-                </imageView>
+                <view alpha="0.74999999999999978" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="D6h-DG-TNe">
+                    <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                    <subviews>
+                        <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" fixedFrame="YES" image="GT4_HomeScreen_PickTool" translatesAutoresizingMaskIntoConstraints="NO" id="TUO-Ad-9go">
+                            <rect key="frame" x="-18" y="147" width="300" height="100"/>
+                        </imageView>
+                        <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" fixedFrame="YES" image="GT4_HomeScreen_SetLanguage" translatesAutoresizingMaskIntoConstraints="NO" id="ESA-OQ-L88">
+                            <rect key="frame" x="-4" y="22" width="302" height="91"/>
+                        </imageView>
+                        <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" fixedFrame="YES" image="GT4_HomeScreen_KGPIcon_" translatesAutoresizingMaskIntoConstraints="NO" id="i2S-5P-q1f">
+                            <rect key="frame" x="0.0" y="217" width="52" height="52"/>
+                        </imageView>
+                    </subviews>
+                    <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                </view>
+                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hK1-HD-VKf">
+                    <rect key="frame" x="247" y="-8" width="80" height="62"/>
+                    <state key="normal" image="GT4_HomeScreen_SettingsIcon_">
+                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                    </state>
+                    <connections>
+                        <action selector="settingsButtonPressed:" destination="iN0-l3-epB" eventType="touchUpInside" id="8N5-pI-EwH"/>
+                    </connections>
+                </button>
             </subviews>
             <connections>
                 <outlet property="iconImageView" destination="jLQ-YV-T02" id="ulA-Nk-cy1"/>
-                <outlet property="pickToolImageView" destination="KqV-sW-gO4" id="8p1-lZ-XUl"/>
+                <outlet property="instructionsOverlayView" destination="D6h-DG-TNe" id="9W3-5y-qyd"/>
+                <outlet property="pickToolImageView" destination="TUO-Ad-9go" id="ImI-2G-4W3"/>
                 <outlet property="refreshDraftsView" destination="PkX-j3-M1e" id="Utx-sp-9jc"/>
                 <outlet property="setLanguageImageView" destination="ESA-OQ-L88" id="Efo-qD-hme"/>
                 <outlet property="settingsButton" destination="hK1-HD-VKf" id="FXU-88-hBW"/>
@@ -88,10 +98,11 @@
     </objects>
     <resources>
         <image name="GT4_HomeScreen_Background_" width="320" height="568"/>
+        <image name="GT4_HomeScreen_KGPIcon_" width="52" height="52"/>
         <image name="GT4_HomeScreen_NavBar_" width="320" height="46"/>
-        <image name="GT4_HomeScreen_PickTool" width="240" height="95"/>
+        <image name="GT4_HomeScreen_PickTool" width="300" height="100"/>
         <image name="GT4_HomeScreen_Pull_Icon_" width="11" height="14"/>
-        <image name="GT4_HomeScreen_SetLanguage" width="282" height="91"/>
+        <image name="GT4_HomeScreen_SetLanguage" width="300" height="100"/>
         <image name="GT4_HomeScreen_SettingsIcon_" width="24" height="24"/>
         <image name="GT4_Home_BookIcon_" width="80" height="75"/>
     </resources>
